--- a/package.json
+++ b/package.json
@@ -41,24 +41,31 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@reown/appkit": "^1.8.8",
     "@reown/appkit-adapter-wagmi": "^1.0.4",
-    "@supabase/supabase-js": "^2.58.0",
+    "@supabase/supabase-js": "^2.74.0",
     "@tanstack/react-query": "^5.90.2",
+    "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.6.0",
+    "express": "^5.1.0",
     "framer-motion": "^12.23.22",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
+    "next": "^15.5.4",
     "next-themes": "^0.3.0",
+    "node-fetch": "^3.3.2",
     "qr": "^0.5.2",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.61.1",
+    "react-qr-code": "^2.0.18",
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
     "recharts": "^2.15.4",
@@ -75,8 +82,8 @@
     "@eslint/js": "^9.32.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/deno": "^2.5.0",
-    "@types/node": "^22.16.5",
-    "@types/react": "^19.2.0",
+    "@types/node": "^22.18.8",
+    "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.0",
     "@vitejs/plugin-react-swc": "^3.11.0",
     "autoprefixer": "^10.4.21",
@@ -87,8 +94,21 @@
     "lovable-tagger": "^1.1.10",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.8.3",
+    "typescript": "^5.9.3",
     "typescript-eslint": "^8.38.0",
     "vite": "^7.1.9"
-  }
+  },
+  "description": "**URL**: https://lovable.dev/projects/fb799952-eaf2-481a-95cb-0ccca84c2ac4",
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/borislavgotsev27/pepeplay.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/borislavgotsev27/pepeplay/issues"
+  },
+  "homepage": "https://github.com/borislavgotsev27/pepeplay#readme"
 }
